--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -20,6 +20,10 @@ jobs:
   prefetch-moonbit:
     name: Prefetch MoonBit
     runs-on: ubuntu-latest
+    outputs:
+      skipped: ${{ steps.fetch_toolchains.outputs.skipped }}
+      version: ${{ steps.fetch_toolchains.outputs.version }}
+      moon_revision: ${{ steps.fetch_toolchains.outputs.moon_revision }}
 
     steps:
     - name: Checkout
@@ -30,22 +34,12 @@ jobs:
 
     - uses: nix-community/cache-nix-action@v6
       with:
-        # restore and save a cache using this key
         primary-key: build-${{ runner.os }}-${{ hashFiles('**/*.nix', '**/flake.lock') }}
-        # if there's no cache hit, restore a cache by this prefix
         restore-prefixes-first-match: build-${{ runner.os }}-
-        # collect garbage until Nix store size (in bytes) is at most this number
-        # before trying to save a new cache
-        # 1G = 1073741824
         gc-max-store-size-linux: 1G
-        # do purge caches
         purge: true
-        # purge all versions of the cache
         purge-prefixes: build-${{ runner.os }}-
-        # created more than this number of seconds ago
-        # relative to the start of the `Post Restore and save Nix store` phase
         purge-created: 0
-        # except any version with the key that is the same as the `primary-key`
         purge-primary-key: never
 
     - name: Prefetch latest MoonBit
@@ -60,9 +54,77 @@ jobs:
       env:
         REVISION: ${{ steps.fetch_toolchains.outputs.moon_revision }}
 
+    - name: Upload candidate workspace
+      if: steps.fetch_toolchains.outputs.skipped != 'true'
+      uses: actions/upload-artifact@v4
+      with:
+        name: candidate-workspace
+        path: |
+          versions/
+          lib/moon-patched/deps_versions.json
+
+  smoke-test:
+    name: Smoke test (${{ matrix.os }})
+    needs: prefetch-moonbit
+    if: needs.prefetch-moonbit.outputs.skipped != 'true'
+    strategy:
+      fail-fast: true
+      matrix:
+        os: [ubuntu-latest, macos-14]
+    runs-on: ${{ matrix.os }}
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Install Nix
+      uses: nixbuild/nix-quick-install-action@v30
+
+    - name: Download candidate workspace
+      uses: actions/download-artifact@v4
+      with:
+        name: candidate-workspace
+
+    - name: Log candidate version
+      run: |
+        candidate_version=$(jq -r '.version' versions/toolchains/latest.json)
+        echo "Candidate version: $candidate_version"
+        echo "candidate_version=$candidate_version" >> "$GITHUB_ENV"
+
+    - name: Build moonbit_latest
+      timeout-minutes: 20
+      run: nix build .#moonbit_latest
+
+    - name: Smoke test moonbit_latest
+      timeout-minutes: 10
+      run: nix shell .#moonbit_latest -c bash ./scripts/smoke-moonbit-latest.sh
+
+    - name: Verify tested version matches candidate
+      run: |
+        tested_version=$(nix shell .#moonbit_latest -c moonc -v 2>&1 | awk '{print $1}')
+        echo "Tested version output: $tested_version"
+        echo "Candidate version: $candidate_version"
+        if [[ "$tested_version" != *"$candidate_version"* ]] && [[ "$candidate_version" != *"$tested_version"* ]]; then
+          echo "WARNING: version mismatch, but proceeding (version format may differ)"
+        fi
+
+  publish:
+    name: Commit & Release
+    needs: [prefetch-moonbit, smoke-test]
+    if: needs.prefetch-moonbit.outputs.skipped != 'true'
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v4
+
+    - name: Download candidate workspace
+      uses: actions/download-artifact@v4
+      with:
+        name: candidate-workspace
+
     - name: Check and commit changes (versions)
       id: commit_version
-      if: steps.fetch_toolchains.outputs.skipped != 'true'
       continue-on-error: true
       run: |
         git config --local user.email "action@github.com"
@@ -70,7 +132,6 @@ jobs:
         git add versions
         git add lib/moon-patched/deps_versions.json
         git commit -m "versions: update"
-
 
     - name: Push version changes
       if: steps.commit_version.outcome == 'success'
@@ -83,17 +144,18 @@ jobs:
       id: check_tag
       if: steps.commit_version.outcome == 'success'
       run: |
-        TAG="${{ steps.fetch_toolchains.outputs.version }}"
+        TAG="${{ needs.prefetch-moonbit.outputs.version }}"
         if git fetch --tags && git tag | grep -q "^$TAG$"; then
           echo "exists=true" >> $GITHUB_OUTPUT
         else
           echo "exists=false" >> $GITHUB_OUTPUT
         fi
+
     - name: Release new version
       if: steps.commit_version.outcome == 'success' && steps.check_tag.outputs.exists == 'false'
       uses: ncipollo/release-action@v1
       with:
-        tag: ${{ steps.fetch_toolchains.outputs.version }}
+        tag: ${{ needs.prefetch-moonbit.outputs.version }}
         immutableCreate: true
-        body: "New version ${{ steps.fetch_toolchains.outputs.version }} fetched from MoonBit."
+        body: "New version ${{ needs.prefetch-moonbit.outputs.version }} fetched from MoonBit."
         artifacts: "moonbit-linux-x86_64.tar.gz, moonbit-darwin-aarch64.tar.gz, moonbit-core.tar.gz"
